Archive2/3b/432b686061480b/output
main.cpp:7:7: error: template argument for template template parameter must be a class template or type alias template
    B<A> b;
      ^
1 error generated.
